[metadata]
name = rfgroove
version = attr: rfgroove.__version__
description = Importance Measure and Selection for Groups of Variables with Random Forests
long_description = file: README.md

[options]
packages = find:
install_requires =
  numpy
  joblib
  pandas
  matplotlib
  seaborn
  scikit-learn
